# omnismi

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  app_spec.txt  claude-progress.txt  feature_list.json  init.sh  mkdocs.yml  pyproject.toml
.ai/: context.ai
.github/: PULL_REQUEST_TEMPLATE.md
docs/: agent-playbook.md  api.md  compatibility.md  development.md  index.md  roadmap.md  validation.md  why-omnismi.md
src/omnismi/: __init__.py  api.py  detection.py  errors.py  imports.py  installer.py  models.py  normalize.py  types.py
src/omnismi/backends/: __init__.py  amd.py  base.py  google_tpu.py  nvidia.py  registry.py
src/omnismi/cli/: __init__.py  install.py  main.py
src/omnismi/core/: __init__.py  detector.py  device.py
src/omnismi/validation/: __init__.py  parity.py
src/omnismi/vendors/: __init__.py  base.py
src/omnismi/vendors/amd/: __init__.py
src/omnismi/vendors/nvidia/: __init__.py
tests/: conftest.py  test_amd_backend_mock.py  test_api_contract.py  test_backend_registry.py  test_detector.py  test_google_tpu_backend_mock.py  test_no_vendor_installed.py  test_normalization.py  test_nvidia_backend_mock.py
