[build-system]
requires = ["setuptools>=64.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "omnismi"
version = "1.0.0"
description = "Cross-vendor accelerator observability for AI agents and Python apps (NVIDIA, AMD, and Google TPU today)"
keywords = ["gpu", "tpu", "accelerator", "cross-vendor", "nvidia", "amd", "google", "observability", "ai-agent"]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Omnismi Contributors"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.optional-dependencies]
all = [
    "nvidia-ml-py>=11.525.84",
    "amdsmi>=6.0.0",
    "libtpu>=0.0.37",
]
nvidia = [
    "nvidia-ml-py>=11.525.84",
]
amd = [
    "amdsmi>=6.0.0",
]
tpu = [
    "libtpu>=0.0.37",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "mypy>=1.8",
    "black>=24.0",
    "isort>=5.13",
    "ruff>=0.6",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.24",
]

[project.urls]
Homepage = "https://github.com/omnismi/omnismi"
Repository = "https://github.com/omnismi/omnismi"
Documentation = "https://github.com/omnismi/omnismi/tree/main/docs"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.black]
line-length = 88
target-version = ["py39", "py310", "py311", "py312"]

[tool.isort]
profile = "black"
line-length = 88

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]
ignore = []

[tool.mypy]
python_version = "3.9"
strict = false
warn_return_any = true
warn_unused_configs = true
